# DAIA

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/: brokenimage.txt  daia_prompt.txt  settings.json
docker/: updater.Dockerfile
scripts/: update.sh
src/daia/: __init__.py  __main__.py  bot.py
